add age identification for 2 stages

--- a/css/style.css
+++ b/css/style.css
@@ -207,12 +207,18 @@ section {
 
 .position-options {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
     margin-top: 15px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
+    .position-options {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 500px) {
     .position-options {
         grid-template-columns: 1fr;
     }
